--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <link rel="manifest" href="./manifest.json" />
     <meta name="theme-color" content="black" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
