--- a/offline.html
+++ b/offline.html
@@ -143,67 +143,31 @@
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
   </head>
-  <body>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-        font-size: 15px;
-      }
-
-      body {
-        background-image: url("./offline-background.jpg");
-        background-size: cover;
-        overflow: hidden;
-      }
-
-      #container {
-        width: 60vw;
-        height: 80vh;
-        margin: 10vh auto;
-        background-color: rgba(15, 15, 15, 0.925);
-        border: none;
-        overflow: auto;
-        padding-bottom: 10px;
-      }
-
-      @media (max-width: 768px) {
-        #container {
-          width: 90vw;
-          margin: 10vh auto;
-        }
-      }
-
-      #container h1 {
-        padding: 15px 30px;
-        font-size: 2rem;
-        font-weight: 600;
-        color: white;
-      }
-
-      #container #mantra {
-        padding: 5px 30px;
-        color: white;
-        font-style: italic;
-      }
-    </style>
+  <body style="background-image: url(/offline-background.jpg)">
     <div id="container">
       <h1 id="todays-date"></h1>
-      <p id="mantra">You're currently offline. Please try again in a bit.</p>
+      <h3 id="tasks-count"></h3>
+      <div id="to-do-search">
+        <input type="text" id="search-bar" placeholder="Search..." />
+      </div>
+      <hr />
+      <div id="to-do-display"></div>
+      <div id="to-do-input">
+        <input type="text" id="to-do-add" placeholder="New Todo" />
+        <button id="clear-btn"><b>Clear</b></button>
+      </div>
     </div>
     <script>
-      const displayDate = () => {
-        const date = new Date()
-        todaysDate.innerHTML = date.toLocaleDateString("en-uk", {
-          month: "long",
-          year: "numeric",
-          day: "numeric",
-        })
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./sw.js")
       }
-      const todaysDate = document.getElementById("todays-date")
-      displayDate()
     </script>
+    <script type="module">
+      import "https://cdn.jsdelivr.net/npm/@pwabuilder/pwaupdate"
+
+      const el = document.createElement("pwa-update")
+      document.body.appendChild(el)
+    </script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
